fix: Performed proofreading and editing to enhance spelling and grammar accuracy.

--- a/content/projects/apple-music-discord-rich-presence.mdx
+++ b/content/projects/apple-music-discord-rich-presence.mdx
@@ -6,10 +6,12 @@ date: 2023-05-14
 published: true
 ---
 
+As an Apple Music user, it was disappointing not being able to display what I'm listening to on Discord. So, I developed a Discord rich presence for Apple Music.
 
-As a Apple Music user, missing out on the ability to show what I'm listening to on Discord was a bummer. So I decided to create a Discord rich presence for Apple Music.
+Utilizing the Apple Music API and being part of Apple's developer program, I successfully crafted a Discord rich presence showcasing the current song, artist, and album art from Apple Music.
 
-Using the Apple Music API and being apart of Apple's developer program, I was able to create a Discord rich presence that shows the song, artist, and album art of the song you're currently listening to on Apple Music.
+
+
 
 
 
