--- a/content/projects/clips.mdx
+++ b/content/projects/clips.mdx
@@ -6,7 +6,6 @@ date: 2023-08-02
 published: true
 ---
 
+While I've primarily favored React for web applications, I'm proficient in other technologies as well. To demonstrate my versatility, I embarked on building a video sharing platform using Angular.
 
-Although when it comes to web applications, I have always been a React guy, I more then able to use other teachnologies for the need of a project. So, to show that I'm able to create a indutry standard web application using Angular, I decided to build a video sharing platform.
-
-The application is called clips and it is built using Angular and Firebase. The application allows users to upload, watch, like, and comment on videos. The application also has a user authentication system that allows users to sign up, log in, and log out.
+Named "Clips," the platform is constructed using Angular and Firebase. Users can upload, watch, like, and comment on videos. Additionally, the application features a robust user authentication system facilitating sign up, log in, and log out functionalities.
