--- a/content/projects/codedevils.org.mdx
+++ b/content/projects/codedevils.org.mdx
@@ -8,9 +8,8 @@ published: true
 ---
 
 ![CodeDevils](/projects/codedevils.png)
+CodeDevils is an organization at Arizona State University dedicated to fostering a community of software development enthusiasts. Through workshops, hackathons, and various events, they aim to support students in learning and advancing as developers, with the ultimate goal of securing jobs or internships in the tech industry.
 
-CodeDevils is a organization at Arizona State University that focuses on creating a community of software development enthusiasts. They host workshops, hackathons, and other events to help students learn and grow as developers and get involved in the tech community. So that hopefully they can get a job or internship in the tech industry.
+My involvement in the website revamp for CodeDevils was multifaceted, serving as both project manager and lead developer. Leading the development effort, I oversaw a complete redesign and reimplementation of the website using the Next.js framework. Additionally, I was responsible for establishing a system enabling members with no prior web development experience to contribute to the project by providing resources and documentation on how to contribute effectively.
 
-My involvement with CodeDevils' website revamp has been through my time as a project manager and lead developer. I was tasked with leading the development of the revamped website, which included a complete redesign and reimplementation of the website using the Next.js framework. However, along with the redesign, I was also tasked with setting up a system to allow for members with no prior web development experience to contribute to the team through providing resources and documentation on how to contribute to the website.
-
-Throughtout my time working on the website, I grow a lot as a web developer and learned how to lead teams to be successful no matter who is in it.
+Throughout my tenure on the website project, I experienced significant personal growth as a web developer and honed my leadership skills, ensuring team success regardless of its composition.
