--- a/content/projects/davidnevarez.info.mdx
+++ b/content/projects/davidnevarez.info.mdx
@@ -6,9 +6,6 @@ date: 2024-04-01
 published: true
 ---
 
+Just like many others, I simply desired a certified space on the internet to exhibit my work. Perhaps I'll consider adding a blog in the future, but I'm undecided at the moment.
 
-
-Like so many others, I just wanted a certized place on the internet to showcase my work. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
-
-If you like the design, check out the Repository on GitHub and star it 🤷🏽‍♂️
-
+If you appreciate the design, feel free to visit the repository on GitHub and give it a star 🤷🏽‍♂️
