--- a/content/projects/discord-clone.mdx
+++ b/content/projects/discord-clone.mdx
@@ -9,8 +9,6 @@ published: true
 
 ![Discord Clone](/projects/discord-clone.png)
 
-With this project, I wanted to build a Discord clone using Next.js 13, React, Socket.io, Prisma, Tailwind, and MySQL and learn how to use Socket.io to build a real-time chat application.
+For this project, my aim was to construct a Discord clone utilizing Next.js 13, React, Socket.io, Prisma, Tailwind, and MySQL. My primary goal was to grasp the usage of Socket.io in developing a real-time chat application.
 
-This projects showcases my ability to build a full-stack application on short notice and my ability to learn new technologies quickly as I had never used Socket.io before building this project.
-
-
+This endeavor demonstrates my proficiency in swiftly developing a full-stack application and my adeptness at rapidly acquiring new technologies, as I had no prior experience with Socket.io before undertaking this project.
