--- a/content/projects/docs.codedevils.org.mdx
+++ b/content/projects/docs.codedevils.org.mdx
@@ -9,9 +9,12 @@ published: true
 
 ![CodeDevils Logo](/projects/docs.codedevils.png)
 
-This project was for CodeDevils and it's members, for a couple of reasons, first was for the personal reason of wanting future developers of my projects to be able to easily understand how to use and add to them. As one of the biggest issues I had when i joined the CodeDevils' dev team was the lack of documentation for the projects I was working on. The second reason was to help the CodeDevils' dev team to have a central place to find documentation for all of the projects they work on.
+This project was undertaken for the benefit of CodeDevils and its members, driven by a couple of key motives. Firstly, I aimed to address the personal frustration of encountering inadequate documentation when joining the CodeDevils' development team. I wanted future developers of my projects to have clear and accessible guidelines for understanding and contributing to them. Secondly, I sought to provide the CodeDevils' development team with a centralized repository of documentation for all their projects.
+
+During the development of this project, I seized the opportunity to educate CodeDevils' members on the significance of documentation and how to effectively write it, thereby fostering a culture of comprehensive project documentation within the organization.
 
 
 
-With the development of this project, I was also able to teach members of CodeDevils about the importance of documentation and how to write it. 
+
+
 
