--- a/content/projects/gopherphoenix.com.mdx
+++ b/content/projects/gopherphoenix.com.mdx
@@ -8,6 +8,6 @@ published: true
 
 ![Gopher Phoenix](/projects/gopherphoenix.com.png)
 
-This Website, although not the most visually appealing looking back at it, was a great learning experience and was my first freelance project. I was hired by a local delivery service company in Phoenix, Arizona to create a website for them. The website was built using the Next.js framework and deployed on Vercel. The website was built with a mobile-first approach and is fully "responsive"(looking back, it wasn't fully responsive)
+This website, while not the most visually appealing in retrospect, marked a significant learning milestone as my inaugural freelance project. I was commissioned by a local delivery service company in Phoenix, Arizona, to develop a website for them. Utilizing the Next.js framework, I deployed the website on Vercel, emphasizing a mobile-first approach in its design (albeit with some hindsight acknowledgment of its responsiveness shortcomings).
 
-But although it's not my best work, it highlights my ability to learn and adapt to new technologies and frameworks quickly. It also shows my ability to work with clients and deliver a product that meets their needs.
+Despite its imperfections, this project underscores my capacity to rapidly learn and adapt to new technologies and frameworks. Furthermore, it showcases my ability to collaborate with clients and deliver a product tailored to their requirements.
