--- a/content/projects/learn.codedevils.org.mdx
+++ b/content/projects/learn.codedevils.org.mdx
@@ -8,10 +8,9 @@ published: true
 ---
 
 
-With the rise of technology, the demand for software developers has increased. However, many students struggle to learn coding skills due to the lack of resources and guidance. To address this issue, while working for codedevils web development TemplateContext, we worked on developing a Learning Management System (LMS) platform called learn.codedevils.org. This platform provides students with the opportunity to learn and practice coding skills used by industry professionals and build projects to showcase their skills to potential employers.
+With the rise of technology, the demand for software developers has increased. However, many students struggle to learn coding skills due to the lack of resources and guidance. To address this issue, while working for CodeDevils' web development team, we embarked on developing a Learning Management System (LMS) platform called learn.codedevils.org. This platform provides students with the opportunity to learn and practice coding skills used by industry professionals and build projects to showcase their skills to potential employers.
 
-My role within this project was to design and develop the frontend and backend of the platform using modern web technologies, such as  Next.js, Tailwind CSS, MySQL, and TypeScript. I also played a role in teaching members that were intrested about what goes into building full stack applications for the web.
-
+My role within this project was to design and develop the frontend and backend of the platform using modern web technologies, such as Next.js, Tailwind CSS, MySQL, and TypeScript. I also played a role in teaching members who were interested in learning about building full-stack applications for the web.
 
 ## Features
 
@@ -21,7 +20,6 @@ My role within this project was to design and develop the frontend and backend o
 
 - **Coding Challenges**: The platform also offers coding challenges to help students improve their problem-solving skills and prepare for technical interviews. Students can solve coding problems in different programming languages and receive instant feedback on their solutions.
 
-- **Community**: Members could join CodeDevils' Discord server and participate in active discussions, ask questions, and share resources with other students and industry professionals. They can also attend virtual events, such as workshops and coding competitions, to network with like-minded individuals and gain hands-on experience.
+- **Community**: Members can join CodeDevils' Discord server and participate in active discussions, ask questions, and share resources with other students and industry professionals. They can also attend virtual events, such as workshops and coding competitions, to network with like-minded individuals and gain hands-on experience.
 
 - **Career Services**: The platform provides resources and guidance to help students prepare for job interviews and build a strong portfolio to showcase their skills to potential employers. Students can also access job listings and internship opportunities to kickstart their careers in software development.
-
