--- a/content/projects/notion-clone.mdx
+++ b/content/projects/notion-clone.mdx
@@ -6,11 +6,9 @@ date: 2023-03-01
 published: true
 ---
 
+In this project, I developed a Notion clone using Next.js, TypeScript, and Tailwind CSS. The application enables users to perform CRUD operations (create, read, update, and delete) on pages, and it includes drag-and-drop functionality for reordering pages.
 
-In this project, I built a Notion clone using Next.js, TypeScript, and Tailwind CSS. The app allows users to create, read, update, and delete pages. It also supports drag-and-drop functionality for reordering pages.
-
-I created this project to practice building a full-stack application with Next.js and TypeScript. I also wanted to explore the drag-and-drop functionality, along with the trash can & soft delete feature.
-
+I undertook this project to enhance my proficiency in building full-stack applications with Next.js and TypeScript. Additionally, I aimed to explore drag-and-drop functionality and implement features like the trash can and soft delete.
 
 ## Features
 
@@ -18,8 +16,3 @@ I created this project to practice building a full-stack application with Next.j
 - Drag-and-drop functionality for reordering pages
 - Dark mode support
 - Responsive design
-
-
-
-
-
