--- a/content/projects/wpcarey.asu.edu.mdx
+++ b/content/projects/wpcarey.asu.edu.mdx
@@ -5,10 +5,9 @@ url: https://wpcarey.asu.edu/
 date: 2023-09-01
 published: true
 ---
+This website was constructed using Drupal 8, a content management system facilitating seamless content updates and management. Featuring a responsive design, the website ensures accessibility across diverse devices, spanning from desktop computers to smartphones.
 
-This website was built with Drupal 8, a content management system that allows for easy content updates and management. The website features a responsive design, making it accessible on a variety of devices, from desktop computers to smartphones.
-
-While working for the W. P. Carey School of Business at Arizona State University, I was responsible for managing the website content, ensuring that information was up-to-date and accurate. I also worked closely with the marketing team to develop new content and features to enhance the user experience.
+During my tenure at the W. P. Carey School of Business at Arizona State University, I assumed responsibility for overseeing website content, guaranteeing its timeliness and accuracy. Additionally, I collaborated closely with the marketing team to devise and implement new content and features aimed at enhancing the overall user experience.
 
 ![W. P. Carey School of Business at Arizona State University website](/projects/wpcarey.png)
 
