feature: updated project name

--- a/content/projects/academy.codedevils.org.mdx
+++ b/content/projects/academy.codedevils.org.mdx
@@ -1,16 +1,16 @@
 ---
-title: learn.codedevils.org
+title: academy.codedevils.org
 description: A LMS platform for students to learn and practice coding skills used by industry professionals.
 date: "2023-04-01"
-repository: ASU-CodeDevils/learn.codedevils.org
+repository: ASU-CodeDevils/academy.codedevils.org
 published: true
   
 ---
 
 
-With the rise of technology, the demand for software developers has increased. However, many students struggle to learn coding skills due to the lack of resources and guidance. To address this issue, while working for CodeDevils' web development team, we embarked on developing a Learning Management System (LMS) platform called learn.codedevils.org. This platform provides students with the opportunity to learn and practice coding skills used by industry professionals and build projects to showcase their skills to potential employers.
+With the rise of technology, the demand for software developers has increased. However, many students struggle to learn coding skills due to the lack of resources and guidance. To address this issue, while working for CodeDevils' web development team, I embarked on developing a Learning Management System (LMS) platform for CodeDevils' members. This platform provides members with the opportunity to learn and practice coding skills used by industry professionals and build projects to showcase their skills to potential employers.
 
-My role within this project was to design and develop the frontend and backend of the platform using modern web technologies, such as Next.js, Tailwind CSS, MySQL, and TypeScript. I also played a role in teaching members who were interested in learning about building full-stack applications for the web.
+My role within this project was to design and develop the frontend and backend of the platform using modern web technologies, such as Next.js v14, Tailwind CSS, MySQL, and TypeScript. I also played a role in teaching members who were interested in learning about building full-stack applications for the web.
 
 ## Features
 
