fix: Updated wording and added more content(words)

--- a/content/projects/gopherphoenix.com.mdx
+++ b/content/projects/gopherphoenix.com.mdx
@@ -2,6 +2,7 @@
 title: gopherphoenix.com
 description: A local delivery service company in Phoenix, Arizona.
 repository: fernandonevarez/gopherphoenix.com
+url: https://gopher-courier-express-kuc1jv8ap-sloppyflipflop-s-team.vercel.app/
 date: 2023-07-01
 published: true
 ---
