--- a/content/projects/davidnevarez.info.mdx
+++ b/content/projects/davidnevarez.info.mdx
@@ -6,6 +6,9 @@ date: 2024-04-01
 published: true
 ---
 
-Just like many others, I simply desired a certified space on the internet to exhibit my work. Perhaps I'll consider adding a blog in the future, but I'm undecided at the moment.
 
-If you appreciate the design, feel free to visit the repository on GitHub and give it a star 🤷🏽‍♂️
+
+Like so many others, I wanted a certized place on the internet to showcase my work.
+
+If you like the design, check out the repository on GitHub and maybe star it 🤷🏽‍♂️
+
