chore: Update project names and images, change contact link, and add new project
Updates project names to reflect recent changes and updates the image for CodeDevils.io to match the new website design. Changes the Instagram contact link to LinkedIn for a more professional contact. Adds 'projecthumanities.asu.edu' project.

--- a/content/projects/academy.codedevils.io.mdx
+++ b/content/projects/academy.codedevils.io.mdx
@@ -1,5 +1,5 @@
 ---
-title: academy.codedevils.org
+title: academy.codedevils.io
 description: A LMS platform for students to learn and practice coding skills used by industry professionals.
 date: "2023-04-01"
 repository: ASU-CodeDevils/academy.codedevils.org
