--- a/content/projects/codedevils.io.mdx
+++ b/content/projects/codedevils.io.mdx
@@ -1,8 +1,8 @@
 ---
-title: codedevils.org
+title: codedevils.io
 description: CodeDevils' organization website
 repository: ASU-CodeDevils/codedevils.org
-url: https://codedevils.org
+url: https://codedevils.io
 date: 2024-01-31
 published: true
 ---
