--- a/content/projects/docs.codedevils.io.mdx
+++ b/content/projects/docs.codedevils.io.mdx
@@ -1,8 +1,8 @@
 ---
-title: docs.codedevils.org
+title: docs.codedevils.io
 description: CodeDevils' Documentation
 repository: ASU-CodeDevils/docs.codedevils.org
-url: https://docs.codedevils.org
+url: https://docs.codedevils.io
 date: 2024-03-31
 published: true
 ---
